[fix] close button and modal title overlap.

--- a/client/src/assets/styles/utils/mixins/nav.scss
+++ b/client/src/assets/styles/utils/mixins/nav.scss
@@ -5,7 +5,7 @@
   top: 0;
   width: 100vw;
   z-index: 2;
-  padding: 0.8em 1em;
+  padding: 1em;
   color: white;
   background-color: var(--nav-bg-color);
   display: flex;
